force-app/main/default/objects/Lead/fields/BairroComercial__c.field-meta.xml
<CustomField>
    <fullName>BairroComercial__c</fullName>
    <description>Bairro comercial do lead</description>
    <label>Bairro (Comercial)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>