force-app/main/default/objects/Lead/fields/CanalAtendimento__c.field-meta.xml
<CustomField>
    <fullName>CanalAtendimento__c</fullName>
    <inlineHelpText>Indica o canal ou meio que o lead utilizou para se conectar com a empresa.</inlineHelpText>
    <label>Canal de Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fale conosco</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>Loja</fullName>
            </value>
            <value>
                <fullName>Stand</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Cadastro Manual</fullName>
            </value>
            <value>
                <fullName>Oferta Corretor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>