force-app/main/default/objects/Lead/fields/CelularAdicional1__c.field-meta.xml
<CustomField>
    <fullName>CelularAdicional1__c</fullName>
    <label>Celular Adicional 1</label>
    <type>Phone</type>
</CustomField>