force-app/main/default/objects/Lead/fields/CelularAdicional2__c.field-meta.xml
<CustomField>
    <fullName>CelularAdicional2__c</fullName>
    <label>Celular Adicional 2</label>
    <type>Phone</type>
</CustomField>