force-app/main/default/objects/Lead/fields/CelularAdicional__c.field-meta.xml
<CustomField>
    <fullName>CelularAdicional__c</fullName>
    <inlineHelpText>O campo deve ser preenchido no formato &quot;11999999999&quot;</inlineHelpText>
    <label>Celular Adicional</label>
    <type>Phone</type>
</CustomField>