force-app/main/default/objects/Lead/fields/CelularComercialAdicional__c.field-meta.xml
<CustomField>
    <fullName>CelularComercialAdicional__c</fullName>
    <label>Celular Comercial Adicional</label>
    <type>Phone</type>
</CustomField>