force-app/main/default/objects/Lead/fields/CEP_Comercial__c.field-meta.xml
<CustomField>
    <fullName>CEP_Comercial__c</fullName>
    <description>Cep comercial do lead</description>
    <label>CEP (Comercial)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>