force-app/main/default/objects/Lead/fields/ChaveExternaWhatsApp__c.field-meta.xml
<CustomField>
    <fullName>ChaveExternaWhatsApp__c</fullName>
    <description>Identificador deste lead no WhatsApp.</description>
    <externalId>true</externalId>
    <inlineHelpText>Indique o identificador deste lead no WhatsApp.</inlineHelpText>
    <label>Chave externa (WhatsApp)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>