force-app/main/default/objects/Lead/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <description>Cidade do lead</description>
    <label>Cidade</label>
    <length>30</length>
    <type>Text</type>
</CustomField>