force-app/main/default/objects/Lead/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <inlineHelpText>Verifique se o CNPJ está no formato correto: de 14 dígitos corridos</inlineHelpText>
    <label>CNPJ</label>
    <length>14</length>
    <type>Text</type>
</CustomField>