force-app/main/default/objects/Lead/fields/Conjuge__c.field-meta.xml
<CustomField>
    <fullName>Conjuge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cônjuge</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Cônjuge)</relationshipLabel>
    <relationshipName>LeadsConjuge</relationshipName>
    <type>Lookup</type>
</CustomField>