force-app/main/default/objects/Lead/fields/ContadorMensagemPadrao__c.field-meta.xml
<CustomField>
    <fullName>ContadorMensagemPadrao__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Auxilia a contagem de mensagens padrão já enviadas assim que o Lead troca as primeiras mensagens.</description>
    <inlineHelpText>Contagem de mensagens padrão.</inlineHelpText>
    <label>Contador Mensagem Padrao</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>