force-app/main/default/objects/Lead/fields/ContatoInvalido__c.field-meta.xml
<CustomField>
    <fullName>ContatoInvalido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contato Inválido</label>
    <type>Checkbox</type>
</CustomField>