force-app/main/default/objects/Lead/fields/CorretorContato__c.field-meta.xml
<CustomField>
    <fullName>CorretorContato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corretor (Contato)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>