force-app/main/default/objects/Lead/fields/DataConversao__c.field-meta.xml
<CustomField>
    <fullName>DataConversao__c</fullName>
    <label>Data conversão do lead</label>
    <type>DateTime</type>
</CustomField>