force-app/main/default/objects/Lead/fields/DataDeNascimento__c.field-meta.xml
<CustomField>
    <fullName>DataDeNascimento__c</fullName>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>