force-app/main/default/objects/Lead/fields/DataEntradaFase__c.field-meta.xml
<CustomField>
    <fullName>DataEntradaFase__c</fullName>
    <label>Data de entrada na Fase</label>
    <type>DateTime</type>
</CustomField>