force-app/main/default/objects/Lead/fields/DataUltimaReiteracoes__c.field-meta.xml
<CustomField>
    <fullName>DataUltimaReiteracoes__c</fullName>
    <label>Última Reiteração</label>
    <type>Date</type>
</CustomField>