force-app/main/default/objects/Lead/fields/EmailAdicional__c.field-meta.xml
<CustomField>
    <fullName>EmailAdicional__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Email Adicional</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>