force-app/main/default/objects/Lead/fields/EmpreendimentoInteresseWeb__c.field-meta.xml
<CustomField>
    <fullName>EmpreendimentoInteresseWeb__c</fullName>
    <description>Campo tipo texto sendo usado no Web-to-Lead</description>
    <label>Empreendimento de Interesse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>