force-app/main/default/objects/Lead/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado do lead</description>
    <label>Estado</label>
    <length>30</length>
    <type>Text</type>
</CustomField>