force-app/main/default/objects/Lead/fields/FarolLead__c.field-meta.xml
<CustomField>
    <fullName>FarolLead__c</fullName>
    <formula>IF ( (DataHoraVencimento__c  - NOW()   ) *24 * 60 &lt;= ConfiguracaoDeSLA__r.tempoLimiteParaFarolVermelho__c  , IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 15),
				IF((  DataHoraVencimento__c  - NOW() ) *24 * 60 &lt;= ConfiguracaoDeSLA__r.tempoLimiteParaFarolAmarelo__c , IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, 15),	IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, 15))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Farol de Lead</label>
    <type>Text</type>
</CustomField>