force-app/main/default/objects/Lead/fields/FimDialogo__c.field-meta.xml
<CustomField>
    <fullName>FimDialogo__c</fullName>
    <description>Indica a data e hora de fim do diálogo via serviço externo de mensagens.</description>
    <inlineHelpText>Indica a data e hora de fim do diálogo via serviço externo de mensagens.</inlineHelpText>
    <label>Fim do diálogo</label>
    <type>DateTime</type>
</CustomField>