force-app/main/default/objects/Lead/fields/Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo__c</fullName>
    <label>Id Externo</label>
    <type>TextArea</type>
</CustomField>