force-app/main/default/objects/Lead/fields/IDAnapro__c.field-meta.xml
<CustomField>
    <fullName>IDAnapro__c</fullName>
    <externalId>true</externalId>
    <label>ID Anapro</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>