force-app/main/default/objects/Lead/fields/Informacoes_Adicionais__c.field-meta.xml
<CustomField>
    <fullName>Informacoes_Adicionais__c</fullName>
    <label>Informacoes Adicionais</label>
    <length>255</length>
    <type>Text</type>
</CustomField>