force-app/main/default/objects/Lead/fields/InicioDialogo__c.field-meta.xml
<CustomField>
    <fullName>InicioDialogo__c</fullName>
    <description>Indica a data e hora de início do diálogo via serviço externo de mensagens.</description>
    <inlineHelpText>Indica a data e hora de início do diálogo via serviço externo de mensagens.</inlineHelpText>
    <label>Início do diálogo</label>
    <type>DateTime</type>
</CustomField>