force-app/main/default/objects/Lead/fields/LeadNaoVisitou__c.field-meta.xml
<CustomField>
    <fullName>LeadNaoVisitou__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead não quis visitar empreendimento</label>
    <type>Checkbox</type>
</CustomField>