force-app/main/default/objects/Lead/fields/LogradouroComercial__c.field-meta.xml
<CustomField>
    <fullName>LogradouroComercial__c</fullName>
    <description>Logradouro comercial do lead</description>
    <label>Logradouro (Comercial)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>