force-app/main/default/objects/Lead/fields/ltima_Reitera_o__c.field-meta.xml
<CustomField>
    <fullName>ltima_Reitera_o__c</fullName>
    <label>Ultima Reiteração</label>
    <type>DateTime</type>
</CustomField>