force-app/main/default/objects/Lead/fields/Marked_for_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Marked_for_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked_for_Deletion</label>
    <type>Checkbox</type>
</CustomField>