force-app/main/default/objects/Lead/fields/MidiaOriginal__c.field-meta.xml
<CustomField>
    <fullName>MidiaOriginal__c</fullName>
    <label>Mídia Original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>