force-app/main/default/objects/Lead/fields/MotivoNaoQualificacao__c.field-meta.xml
<CustomField>
    <fullName>MotivoNaoQualificacao__c</fullName>
    <description>Esse campo era chamado como &quot;motivo  da não qualificação&quot;  nas classes, porém precisou alterar a label para &quot;Motivo da Perda&quot;</description>
    <inlineHelpText>Ao ser desqualificado ou perdido, o registro deverá apresentar um motivo</inlineHelpText>
    <label>Motivo da Perda</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SAC</fullName>
            </value>
            <value>
                <fullName>LGPD</fullName>
            </value>
            <value>
                <fullName>Contato inexistente</fullName>
            </value>
            <value>
                <fullName>Cliente sem interesse</fullName>
            </value>
            <value>
                <fullName>Não atende</fullName>
            </value>
            <value>
                <fullName>Cliente perdido por falta de interação</fullName>
            </value>
            <value>
                <fullName>Tentativa de contato excedida</fullName>
            </value>
            <value>
                <fullName>Venda realizada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>