force-app/main/default/objects/Lead/fields/NomeDaEmpresa__c.field-meta.xml
<CustomField>
    <fullName>NomeDaEmpresa__c</fullName>
    <description>Nom da Empresa</description>
    <label>Nome da Empresa</label>
    <length>80</length>
    <type>Text</type>
</CustomField>