force-app/main/default/objects/Lead/fields/NumeroEndereco__c.field-meta.xml
<CustomField>
    <fullName>NumeroEndereco__c</fullName>
    <label>Número</label>
    <length>4</length>
    <type>Text</type>
</CustomField>