force-app/main/default/objects/Lead/fields/OfertaCorretor__c.field-meta.xml
<CustomField>
    <fullName>OfertaCorretor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OfertaCorretor</label>
    <type>Checkbox</type>
</CustomField>