force-app/main/default/objects/Lead/fields/Origem_Lead_Reiterado__c.field-meta.xml
<CustomField>
    <fullName>Origem_Lead_Reiterado__c</fullName>
    <label>Origem Lead Reiterado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>