force-app/main/default/objects/Lead/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>País</label>
    <length>2</length>
    <type>Text</type>
</CustomField>