force-app/main/default/objects/Lead/fields/PorqueNaoVisitou__c.field-meta.xml
<CustomField>
    <fullName>PorqueNaoVisitou__c</fullName>
    <description>Justificativa do por que o lead  não quis visitar o empreendimento</description>
    <inlineHelpText>Justificativa do por que o lead não quis visitar o empreendimento</inlineHelpText>
    <label>Por que não visitou?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadNaoVisitou__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cliente não está em momento de compra</fullName>
            </value>
            <value>
                <fullName>Cliente fora da cidade</fullName>
            </value>
            <value>
                <fullName>Sem disponibilidade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>