force-app/main/default/objects/Lead/fields/PrimeiraInteracao__c.field-meta.xml
<CustomField>
    <fullName>PrimeiraInteracao__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primeira Interação</label>
    <type>DateTime</type>
</CustomField>