force-app/main/default/objects/Lead/fields/PrimeiroEmpreendimento__c.field-meta.xml
<CustomField>
    <fullName>PrimeiroEmpreendimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primeiro Empreendimeno de Interesse do Lead</description>
    <inlineHelpText>Primeiro Empreendimeno de Interesse do Lead</inlineHelpText>
    <label>Primeiro Empreendimento de Interesse</label>
    <referenceTo>Empreendimento__c</referenceTo>
    <relationshipLabel>Leads (Primeiro Empreendimento de Interesse)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>