force-app/main/default/objects/Lead/fields/Reiteracao__c.field-meta.xml
<CustomField>
    <fullName>Reiteracao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reiteracao</label>
    <type>Checkbox</type>
</CustomField>