force-app/main/default/objects/Lead/fields/Renda__c.field-meta.xml
<CustomField>
    <fullName>Renda__c</fullName>
    <label>Renda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>