force-app/main/default/objects/Lead/fields/ResponsavelCompra__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelCompra__c</fullName>
    <label>Responsável pela Compra</label>
    <length>45</length>
    <type>Text</type>
</CustomField>