force-app/main/default/objects/Lead/fields/RoletaLeads__c.field-meta.xml
<CustomField>
    <fullName>RoletaLeads__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indica a roleta de leads para onde o lead foi distribuído.</description>
    <inlineHelpText>Indica a roleta de leads para onde o lead foi distribuído.</inlineHelpText>
    <label>Roleta de leads</label>
    <referenceTo>RoletaLeads__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>