force-app/main/default/objects/Lead/fields/UltimaMensagem__c.field-meta.xml
<CustomField>
    <fullName>UltimaMensagem__c</fullName>
    <description>Indica a data e hora da última mensagem recebida em conversa via serviço externo de mensagens.</description>
    <inlineHelpText>Indica a data e hora da última mensagem recebida em conversa via serviço externo de mensagens.</inlineHelpText>
    <label>Última mensagem</label>
    <type>DateTime</type>
</CustomField>