force-app/main/default/objects/Lead/fields/UsuarioCorretor__c.field-meta.xml
<CustomField>
    <fullName>UsuarioCorretor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Contato)</relationshipLabel>
    <relationshipName>LeadsContatoCorretor</relationshipName>
    <type>Lookup</type>
</CustomField>