force-app/main/default/objects/Lead/fields/UTMMidiaOriginal__c.field-meta.xml
<CustomField>
    <fullName>UTMMidiaOriginal__c</fullName>
    <label>UTM Mídia Original</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
                <label>Rádio</label>
            </value>
            <value>
                <fullName>Televisao</fullName>
                <label>Televisão</label>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Publicacoes</fullName>
                <label>Publicações</label>
            </value>
            <value>
                <fullName>XTwitter</fullName>
                <label>X (Twitter)</label>
            </value>
            <value>
                <fullName>FacebookAds</fullName>
                <label>Facebook Ads</label>
            </value>
            <value>
                <fullName>Wi-Fi</fullName>
            </value>
            <value>
                <fullName>SiteYou</fullName>
                <label>Site You</label>
            </value>
            <value>
                <fullName>LandingPage</fullName>
                <label>Landing Page</label>
            </value>
            <value>
                <fullName>TikTok</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
            <value>
                <fullName>Tapume</fullName>
            </value>
            <value>
                <fullName>AnuncioDeLoja</fullName>
                <label>Anúncio de Loja</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>