force-app/main/default/objects/Lead/validationRules/BloqueioDeAvanco.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueioDeAvanco</fullName>
    <active>false</active>
    <description>Validação que impede o avanço de fase caso o campo &quot;O campo &apos;Empreendimento de Interesse&apos; é obrigatório. Por favor, preencha antes de continuar&quot;
esteja em branco</description>
    <errorConditionFormula>AND (
 TEXT(Status) = &quot;Qualificacao&quot;,
 ISBLANK(TEXT(PorqueNaoVisitou__c))
)</errorConditionFormula>
    <errorDisplayField>PorqueNaoVisitou__c</errorDisplayField>
    <errorMessage>Preencha o campo para avançar de fase</errorMessage>
</ValidationRule>