force-app/main/default/objects/Lead/validationRules/EmpreendimentoInteresseRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>EmpreendimentoInteresseRequired</fullName>
    <active>true</active>
    <description>Campo empreendimento de interrese não foi preenchido</description>
    <errorConditionFormula>IF(
    TEXT(Status) = &quot;Agendamento de Visita&quot; &amp;&amp; ISBLANK(EmpreendimentoInteresse__c) &amp;&amp; PRIORVALUE(Status) &lt;&gt; &quot;Agendamento de Visita&quot;,
    true,
    false
)</errorConditionFormula>
    <errorDisplayField>EmpreendimentoInteresse__c</errorDisplayField>
    <errorMessage>Você deve preencher o campo &apos;Empreendimento de Interesse&apos; antes de avançar</errorMessage>
</ValidationRule>