force-app/main/default/objects/Lead/validationRules/ImutabilidadeInformacoes.validationRule-meta.xml
<ValidationRule>
    <fullName>ImutabilidadeInformacoes</fullName>
    <active>true</active>
    <description>Sempre for novo ou houverem alterações</description>
    <errorConditionFormula>AND(
    ISNEW(),                             
        ISCHANGED(LeadSource),
        ISCHANGED(EmpreendimentoInteresse__c),  
								ISCHANGED(Status)
    )</errorConditionFormula>
    <errorMessage>Alterações não foram salvas.</errorMessage>
</ValidationRule>