force-app/main/default/objects/Lead/validationRules/LeadSourceCanalAtendimento.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadSourceCanalAtendimento</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK (TEXT ( CanalAtendimento__c ))</errorConditionFormula>
    <errorDisplayField>CanalAtendimento__c</errorDisplayField>
    <errorMessage>É necessário selecionar um campo.</errorMessage>
</ValidationRule>