force-app/main/default/objects/Lead/validationRules/LeadSourceCelular.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadSourceCelular</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(MobilePhone)),
  NOT(REGEX(MobilePhone, &quot;[0-9]{11}&quot;))

)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>O campo &quot;Celular&quot; deve ser preenchido no formato &quot;11999999999&quot;</errorMessage>
</ValidationRule>