force-app/main/default/objects/Lead/validationRules/LeadSourceEmail.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadSourceEmail</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Email)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>É necessário inserir um valor ao campo email.</errorMessage>
</ValidationRule>