force-app/main/default/objects/Lead/validationRules/MotivoDaPerda.validationRule-meta.xml
<ValidationRule>
    <fullName>MotivoDaPerda</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    NOT(ISPICKVAL(MotivoNaoQualificacao__c , &quot;&quot;)), 
       NOT( 
           OR( ISPICKVAL(Status, &quot;Descartado&quot;),              
               ISPICKVAL(Status, &quot;Lead Perdido(Não trabalho)&quot;) 
     ) 
    ) 
   )</errorConditionFormula>
    <errorDisplayField>MotivoNaoQualificacao__c</errorDisplayField>
    <errorMessage>O campo de motivo só pode ser preenchido nas fases de Perdido e Descartado</errorMessage>
</ValidationRule>