force-app/main/default/objects/Lead/validationRules/MotivoDaPerdaEmBranco.validationRule-meta.xml
<ValidationRule>
    <fullName>MotivoDaPerdaEmBranco</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   ISPICKVAL(MotivoNaoQualificacao__c , &quot;&quot;),
   NOT(
      OR(
         ISPICKVAL(Status, &quot;Descartado&quot;),
         ISPICKVAL(Status, &quot;Lead Perdido(Não trabalho)&quot;)
      )
   )
)</errorConditionFormula>
    <errorDisplayField>MotivoNaoQualificacao__c</errorDisplayField>
    <errorMessage>O Motivo não pode estar em branco na Fase de Descartado ou Perdido</errorMessage>
</ValidationRule>